--- a/package.json
+++ b/package.json
@@ -1,30 +1,40 @@
 {
   "name": "nuxt-app",
   "private": true,
-  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxi generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "gh-pages --dotfiles -d .output/public"
+    "deploy": "gh-pages --dotfiles -d .output/public",
+    "lint:js": "eslint --ext \".ts,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:js && yarn lint:prettier",
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "eslint": "^8.53.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "gh-pages": "^6.0.0",
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5",
-    "gh-pages": "^6.0.0"
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@pinia/nuxt": "^0.5.0",
     "@types/node": "^20.8.6",
+    "@typescript-eslint/parser": "^6.10.0",
     "chart.js": "^4.4.0",
     "chartjs-plugin-autocolors": "^0.2.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.3",
+    "typescript": "^5.2.2",
     "vue-chartjs": "^5.2.0"
   }
 }
